# multirobot_shapes

./: CMakeLists.txt  README.md  package.xml  report.md  setup.py
action/: GoThere.action
launch/: multirobot_shapes_gazebo.launch
nodes/: follower  leader  multirobot_shapes_tf_broadcaster  static_multirobot_shapes_tf_broadcaster
srv/: RegistrationService.srv
